# sieve

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
conf/: default.yaml
deduplication/: config.py  core.py
docs/: deduplication.md
scripts/: benchmark_inference.sh
src/: __init__.py  dedup.py  embed.py  index.py  languages.py  utils.py
test/: test_dedup.py  test_embed.py  test_index.py
tests/: test_deduplication.py
