[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sieve-dedup"
version = "0.2.1"
description = "Semantic deduplication for multilingual training corpora"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Protonhash", email = "protonhash@proton.me"}
]
keywords = ["nlp", "deduplication", "multilingual", "training-data", "text-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "datasets>=2.19.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
sieve = "sieve.cli:main"

[project.urls]
Homepage = "https://github.com/Protonhash/sieve"
Repository = "https://github.com/Protonhash/sieve.git"
Issues = "https://github.com/Protonhash/sieve/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires CUDA-capable GPU",
    "slow: takes >30 seconds",
]
